# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
#

2005-05-28 18:20:08 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-63

    Summary:
      catalog, optimize index positions resource
    Revision:
      itools--main--0.9--patch-63

    Change the layout of the positions resource, now it is a made of
    variable size blocks.
    
    As result the different operations, index, unindex and search are
    much faster.

    modified files:
     Changelog catalog/IIndex.py


2005-05-28 17:55:24 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-62

    Summary:
      catalog, fix profiling script
    Revision:
      itools--main--0.9--patch-62


    modified files:
     Changelog catalog/prof.py


2005-05-28 12:53:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-61

    Summary:
      merge from the 0.8 branch
    Revision:
      itools--main--0.9--patch-61

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-95
       get ready to release 0.8.1
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-96
       catalog, fix profile and bench script
    
     * jdavid@itaapy.com--public/itools--main--0.8--patch-97
       xhtml, improve "to_text" performance for big documents
    

    modified files:
     CHANGES.txt Changelog catalog/prof.py setup.py xhtml/XHTML.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.8--patch-95
     jdavid@itaapy.com--public/itools--main--0.8--patch-96
     jdavid@itaapy.com--public/itools--main--0.8--patch-97


2005-05-27 14:28:05 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-60

    Summary:
      handlers, split new class Node from Handler
    Revision:
      itools--main--0.9--patch-60

    Start to separate the category "handler as a logical representation of
    a resource" from "handler as a node in the handler tree".
    
    For now the implementation change has been to split the "handler tree"