@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-05-29 12:56:45 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-64
+
+    Summary:
+      catalog, optimize, merge "documents" and "positions" resources
+    Revision:
+      itools--main--0.9--patch-64
+
+
+    modified files:
+     Changelog catalog/IIndex.py
+
+
 2005-05-28 18:20:08 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-63
 
     Summary:
